feat: add quotes api
